src/routes/volume/VolumeList.less
.volumeState {
  display: flex;
  align-items: center;
  justify-content: center;
}
.volumeFilterDropdown {
  padding: 8px;
  border-radius: 6px;
  background: #fff;
  box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
}
.filterTitle {
  color: #666;
  font-size: 15px;
}
.workloadContainer {
  margin-top: 10px;
  border-radius: 4px;
  padding: 5px 7px 5px;
  position: relative;
  display: inline-block;
  .pod {
    position: absolute;
    right: 0px;
    top: -20px;
    left: 50%;
    text-align: center;
    transform: translateX(-50%); 
    height: 24px;
    line-height: 24px;
    overflow: hidden;
    text-overflow:ellipsis;
  }
}

